--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "sio-chat",
+    "name": "anon-chat",
     "version": "0.0.8",
-    "description": "my first socket.io app",
+    "description": "Anonoymous chat",
     "dependencies": {
         "express": "4.10.2",
         "socket.io": "1.2.0"
     },"scripts" : {
         "debug" : "node index-debug.js"
     },"repository": {
-        "type": "git",
-        "url": "git@gitlab.com:aymericm/anonymous-chat.git"
+        "url": "https://github.com/AyymericM/anonymous-chat"
     }
 }
